<resources>
    <string name="app_name">StudyWallet</string>
    <string name="tutorial">Tutorial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Items -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_rankings">Rankings</string>
    <string name="nav_all_projects">Projects</string>
    <string name="nav_title_personal">Personal</string>
    <string name="nav_transfer">Transfer</string>
    <string name="nav_projects">My Projects</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_account">Account</string>

    <!-- Content Descriptions -->
    <string name="image_view_logo">Study Coin Logo</string>
    <string name="image_project_logo">Project Language Logo</string>

    <!-- Buttons -->
    <string name="button_login">LOGIN</string>
    <string name="button_add_project">+Project</string>
    <string name="button_apply">Apply</string>
    <string name="button_transfer">Transfer</string>

    <!-- Hints -->
    <string name="hint_student_nr">Student Nr.</string>
    <string name="hint_student_nr_label">(Example: i356897)</string>
    <string name="hint_name">Name</string>
    <string name="hint_amount">Amount</string>

    <!-- Text -->
    <string name="text_history">History: </string>
    <string name="text_name">Name: </string>
    <string name="text_email">Email: </string>
    <string name="text_id">Student ID: </string>
    <string name="text_balance">Balance: </string>
    <string name="text_total_coins">Total Coins: </string>
    <string name="text_type">Type: </string>

    <string name="title_activity_project">Project Information</string>
    <string name="action_settings">Settings</string>
</resources>
