<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_rankings"
            android:icon="@drawable/ic_rank"
            android:title="@string/nav_rankings" />

        <item
            android:id="@+id/nav_all_projects"
            android:icon="@drawable/ic_project"
            android:title="@string/nav_all_projects" />


        <item android:title="@string/nav_title_personal">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_transfer"
                        android:icon="@drawable/ic_transfer"
                        android:title="@string/nav_transfer" />

                    <item
                        android:id="@+id/nav_projects"
                        android:icon="@drawable/ic_project"
                        android:title="@string/nav_projects" />
                </group>
            </menu>
        </item>

        <item android:title="@string/nav_title_settings">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_account"
                        android:icon="@drawable/ic_account"
                        android:title="@string/nav_account" />
                </group>
            </menu>
        </item>

    </group>

</menu>
