<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.dcentralized.studywallet.fragments.DashboardFragment">

    <TextView
        android:id="@+id/textContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_study_coin_button"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="61dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_view_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lg_study_coin" />

    <TextView
        android:id="@+id/textRank"
        style="@style/AppTheme.StudyCoinText"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCoins"
        style="@style/AppTheme.CoinAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/textRank"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHistory"
        style="@style/AppTheme.StudyCoinText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableBottom="@drawable/border"
        android:drawablePadding="4dp"
        android:text="@string/text_history"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContainer" />

    <Button
        android:id="@+id/buttonAddProject"
        style="@style/AppTheme.StudyCoinButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_round_corner"
        android:text="@string/button_add_project"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshTransactions"
        android:layout_width="387dp"
        android:layout_height="449dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddProject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHistory"
        app:layout_constraintVertical_bias="0.0">

        <ListView
            android:id="@+id/listTransactions"
            android:layout_width="0dp"
            android:layout_height="0dp" />

    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>
